bổ sung 'Cảm nghĩ'

--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -40,7 +40,7 @@
    "id": "2dc633d2",
    "metadata": {},
    "source": [
-    "https://github.com/chopcolate/DataPrograming.git"
+    "[Nhấp vào đây để xem](https://github.com/chopcolate/DataPrograming.git)."
    ]
   },
   {
@@ -67,7 +67,8 @@
    "source": [
     "- Giải bóng đá Ngoại hạng Anh hay còn được gọi là **Premier League** là giải đấu cao nhất của xứ sở sương mù.Hiện tại,có **20** câu lạc bộ, giải đấu sử dụng hệ thống thăng hạng và xuống hạng (3 đội xếp hạng thấp nhất vào cuối mùa giải).Giải đáu được tổ chức lần đầu vào **1992–1993**, với 22 câu lạc bộ tham gia. Đến năm **1995** thì giảm xuống còn **20** câu lạc bộ.\n",
     "- Bộ dữ liệu thống kê về về các chỉ số liên quan trong mỗi trận đấu ở mỗi mùa giải.Có tổng cộng tất cả trận đấu từ mùa giải **1993-1994** đến **2019-2020**\n",
-    "- Tác giả cho phép tất cả mọi người có thể sử dụng dữ liệu\n",
+    "- Tác giả tên là **ISHAAN MARWAH**, anh ta cho phép tất cả mọi người có thể sử dụng dữ liệu, anh ta còn có thêm lưu ý: \n",
+    "  - **Before you can post on Kaggle, you’ll need to verify your account with a phone number.**\n",
     "- Tác giả thu thập dữ liệu Parse HTML, API"
    ]
   },
@@ -2599,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "1c41c482",
    "metadata": {},
    "outputs": [
@@ -2704,7 +2705,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7728/3010456857.py:5: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
+      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7084/3010456857.py:5: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
       "  Total_Home_Goal = Home['FTHG'].sum(level = ['Season','HomeTeam'])\n"
      ]
     },
@@ -2871,7 +2872,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7728/4223669939.py:4: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
+      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7084/4223669939.py:4: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
       "  Total_Away_Goal = Away['FTAG'].sum(level = ['Season','AwayTeam'])\n"
      ]
     },
@@ -3190,7 +3191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7728/3665209773.py:11: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
+      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7084/3665209773.py:11: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
       "  Home['HomeScore'] = Home['SummaryScore'].sum(level = ['Season','HomeTeam'])\n"
      ]
     },
@@ -3337,7 +3338,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7728/3546587034.py:11: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
+      "C:\\Users\\viets\\AppData\\Local\\Temp/ipykernel_7084/3546587034.py:11: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
       "  Away['AwayScore'] = Away['SummaryScore'].sum(level = ['Season','AwayTeam'])\n"
      ]
     },
@@ -4454,12 +4455,12 @@
    "metadata": {},
    "source": [
     "<a id=section5></a>\n",
-    "# 5.Cảm nghĩ về đồ án"
+    "# 5.Cảm nghĩ về đồ án của mỗi thành viên"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "afedd9d7",
+   "id": "9f27465a",
    "metadata": {},
    "source": [
     "### Trung\n",
@@ -4473,11 +4474,37 @@
     "    \n",
     "    \n",
     "    \n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "033eb5c6",
+   "metadata": {},
+   "source": [
+    "### Việt\n",
+    "\n",
+    "- Những khó khăn của em khi làm đồ án này:\n",
+    " - Về mặt sử dụng công cụ thì một trong những công cụ gây đôi chút khó khăn đó là Gihub, việc sử dụng chưa thuần thục dẫn đến những bối rối khi commit dữ liệu lên.\n",
+    " - Tìm ra những câu hỏi thực sự ý nghĩa và phù hợp với bộ dữ liệu.\n",
+    "\n",
+    "\n",
+    "- Những điều em đã học được khi thực hiện đồ án này:\n",
+    " - Biết được cách để phối hợp với thành viên còn lại để công việc được hiệu quả hơn.Như là cách trao đổi ý kiến, đóng góp , tiếp thu ý kiến của thành viên còn lại\n",
+    " - Sử dụng các công cụ **Github**, **Jupyter Notebook**, các thư viện **python** ngày càng tốt hơn. Điều này giúp tiết kiệm thời gian, và công sức.\n",
+    " - Biết phân tích khi nhận được bộ dữ liệu nào đó. Định hướng được cách làm, lên kế hoạch, trình tự các bước phân tích như thế nào, cần phân tích cái gì trong bộ dữ liệu đó, sắp xếp công việc sao cho hợp lí.\n",
+    " - Cảm thấy am hiểu bóng đá hơn đặc biệt giải Ngoại hạng Anh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afedd9d7",
+   "metadata": {},
+   "source": [
     "    \n",
     "    \n",
     "### Cả nhóm: \n",
-    "- Nếu có thêm thời gian chúng em muốn thực hiện một mô hình học máy dự đoán trận đấu trong mùa giải kế tiếp dựa vào các tập dữ liệu các mùa giải trước đó. Tính khả năng vào vòng trong của một đội khi có dữ liệu về đội đó từ các mùa trước."
+    "- Nếu có thêm thời gian chúng em muốn thực hiện một mô hình học máy dự đoán trận đấu trong mùa giải kế tiếp dựa vào các tập dữ liệu các mùa giải trước đó. Dự đoán được đội vô địch trong một mùa giải tiếp theo."
    ]
   },
   {
@@ -4494,16 +4521,8 @@
    "id": "0e13f13e",
    "metadata": {},
    "source": [
-    "https://www.kaggle.com/ishaanmarwah/premier-league-eda-and-insights/data"
+    "[https://www.kaggle.com](https://www.kaggle.com/ishaanmarwah/premier-league-eda-and-insights/data)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8999efff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
