update "Tham khảo'

--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -4460,7 +4460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f27465a",
+   "id": "27eb3259",
    "metadata": {},
    "source": [
     "### Trung\n",
@@ -4479,7 +4479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "033eb5c6",
+   "id": "0f26f4f0",
    "metadata": {},
    "source": [
     "### Việt\n",
@@ -4521,8 +4521,17 @@
    "id": "0e13f13e",
    "metadata": {},
    "source": [
-    "[https://www.kaggle.com](https://www.kaggle.com/ishaanmarwah/premier-league-eda-and-insights/data)."
+    "[https://www.kaggle.com](https://www.kaggle.com/ishaanmarwah/premier-league-eda-and-insights/data).\n",
+    "[https://pandas.pydata.org/docs/reference](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html).\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f92f91ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
