--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -633,7 +633,7 @@
     "\n",
     "\n",
     "- **FTHG**: Full Time Home Team Goals: (Số bàn thắng đội nhà sau 90 phút)\n",
-    "- **FTAG**: Full Time Away Team Goals:  (Số bàn thắng đội nhà sau 90 phút)\n",
+    "- **FTAG**: Full Time Away Team Goals:  (Số bàn thắng đội khách sau 90 phút)\n",
     "- **FTR**: Full Time Result (H=Home Win, D=Draw, A=Away Win): (Kết quả trận đấu 'H':Đội nhà thắng; 'D': 2 đội hoà nhau; 'A':Đội khách thắng)\n",
     "\n",
     "\n",
